[build-system]
requires = [
    "pybind11>=2.10.1",
    "numpy>=1.26,<1.27; python_version=='3.7'",
    "numpy>=1.26,<1.27; python_version=='3.8'",
    "numpy>=1.26,<1.27; python_version=='3.9' and (platform_machine!='arm64' or platform_system!='Darwin')",
    "numpy>=1.26.4,<1.27; python_version=='3.9' and (platform_machine=='arm64' and platform_system=='Darwin')",
    "numpy>=1.26,<1.27; python_version=='3.10' and (platform_machine!='arm64' or platform_system!='Darwin')",
    "numpy>=1.26.4,<1.27; python_version=='3.10' and (platform_machine=='arm64' and platform_system=='Darwin')",
    "numpy>=1.26.4,<1.27; python_version=='3.11'",
    "scipy >= 1.1.0",
    "setuptools>65.5.1",
    "wheel"
]
